--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head><title>Would I Recommend MS</title></head>
   <body>
     <p>No, I would not recommend <abbr title="Multiple Sclerosis">MS</abbr></p>
