--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><title>Would I Recommend MS</title></head>
+  <head><meta charset=utf-8>
+    <title>Would I Recommend MS?</title>
+  </head>
   <body>
     <p>No, I would not recommend <abbr title="Multiple Sclerosis">MS</abbr></p>
     <p>
       Signed,
       <ul>
         <li><a href="https://tosbourn.com">Toby Osbourn</a></li>
+        <li><a href="https://brucelawson.co.uk">Bruce Lawson</a></li>
       </ul>
     </p>
   </body>
