--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="https://tosbourn.com">Toby Osbourn</a></li>
       <li><a href="https://brucelawson.co.uk">Bruce Lawson</a></li>
+      <li><a href="https://remysharp.com">Remy Sharp</a></li>
     </ul>
   </body>
 </html>
